--- a/language.html
+++ b/language.html
@@ -3,7 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>SuggestLang</title>
+  <link href="css/styles.css">
+  <script src="js/script.js"></script>
 </head>
 <body>
   
