add second input form for submission on page

--- a/language.html
+++ b/language.html
@@ -21,7 +21,17 @@
 				<option value="data">Data-Driven Points</option>
 				<option value="game">SpiderMoon</option>
 			</select><br>
+
+			<label for="interest">Your Coding Magic:</label>
+      <select id="interest" required>
+        <option value="frontend">Frontend Wizardry</option>
+        <option value="backend">Backend Sorcery</option>
+        <option value="ai">Artificial Intelligence Alchemist</option>
+        <option value="iot">IoT Innovator</option>
+      </select><br>
+
 			
+
     </form>
   </div>
 </body>
