add base for form 3 input of questions

--- a/language.html
+++ b/language.html
@@ -30,7 +30,9 @@
         <option value="iot">IoT Innovator</option>
       </select><br>
 
-			
+			<label for="personality">Your Coding Spirit Animal:</label>
+      <select id="personality" required>
+        <option value="cat">Cat (Independent and Curious)</option>
 
     </form>
   </div>
