add change wording of syntax to third input

--- a/language.html
+++ b/language.html
@@ -32,7 +32,11 @@
 
 			<label for="personality">Your Coding Spirit Animal:</label>
       <select id="personality" required>
-        <option value="cat">Cat (Independent and Curious)</option>
+        <option value="lonewolf">Lonewolf (Independent and Curious)</option>
+        <option value="dog">Dog (Loyal and Friendly)</option>
+        <option value="bird">Bird (Intelligent and Agile)</option>
+        <option value="OVO">OVO (Wise and Observant)</option>
+      </select><br>
 
     </form>
   </div>
