--- a/language.html
+++ b/language.html
@@ -14,7 +14,7 @@
       <label for="experince">How many years have you been coding for?</label>
       <input type="number" id="experince" required><br>
 
-			<label for="projectType">Ideal Project:</label>
+			<label for="projectType">Your Coding Project:</label>
 			<select id="projectType" required>
 				<option value="web">Facekoob</option>
 				<option value="app">Tikkot</option>
@@ -36,6 +36,14 @@
         <option value="dog">Dog (Loyal and Friendly)</option>
         <option value="bird">Bird (Intelligent and Agile)</option>
         <option value="OVO">OVO (Wise and Observant)</option>
+      </select><br>
+
+			<label for="superpower">Your Coding Superpower:</label>
+      <select id="superpower" required>
+        <option value="telekinesis">Telekinesis (Move Code With Your Mind)</option>
+        <option value="timeTravel">Time Travel (Fix Bugs in the Past and know exactly when they occur)</option>
+        <option value="invisibility">Invisibility (Code Sneakily)</option>
+        <option value="shapeShift">Shape-Shifting (Become Any Programming Language)</option>
       </select><br>
 
     </form>
