--- a/language.html
+++ b/language.html
@@ -46,6 +46,14 @@
         <option value="shapeShift">Shape-Shifting (Become Any Programming Language)</option>
       </select><br>
 
+			<label for="favDrink">Your Bev of Choice:</label>
+      <select id="favDrink" required>
+        <option value="coffee">Coffee (Classic Coder's Fuel)</option>
+        <option value="tea">Tea (Elegant Coding Ritual)</option>
+        <option value="energyDrink">Energy Drinks (Coding All-Nighter)</option>
+        <option value="soda">Soda (Risky, Yet Refreshing)</option>
+      </select><br>
+
     </form>
   </div>
 </body>
