will add result id and sumbission button for user to html

--- a/language.html
+++ b/language.html
@@ -54,7 +54,9 @@
         <option value="soda">Soda (Risky, Yet Refreshing)</option>
       </select><br>
 
+			<button type="submit">Find My Language!</button>
     </form>
+		<div id="result"></div>
   </div>
 </body>
 </html>
