removed description from drop down choices

--- a/language.html
+++ b/language.html
@@ -32,26 +32,26 @@
 
 			<label for="personality">Your Coding Spirit Animal:</label>
       <select id="personality" required>
-        <option value="lonewolf">Lonewolf (Independent and Curious)</option>
-        <option value="dog">Dog (Loyal and Friendly)</option>
-        <option value="bird">Bird (Intelligent and Agile)</option>
-        <option value="OVO">OVO (Wise and Observant)</option>
+        <option value="lonewolf">Lonewolf</option>
+        <option value="dog">Dog</option>
+        <option value="bird">Bird</option>
+        <option value="OVO">OVO</option>
       </select><br>
 
 			<label for="superpower">Your Coding Superpower:</label>
       <select id="superpower" required>
-        <option value="telekinesis">Telekinesis (Move Code With Your Mind)</option>
-        <option value="timeTravel">Time Travel (Fix Bugs in the Past and know exactly when they occur)</option>
-        <option value="invisibility">Invisibility (Code Sneakily)</option>
-        <option value="shapeShift">Shape-Shifting (Become Any Programming Language)</option>
+        <option value="telekinesis">Telekinesis</option>
+        <option value="timeTravel">Time Travel</option>
+        <option value="invisibility">Invisibility</option>
+        <option value="shapeShift">Shape-Shifting</option>
       </select><br>
 
 			<label for="favDrink">Your Bev of Choice:</label>
       <select id="favDrink" required>
-        <option value="coffee">Coffee (Classic Coder's Fuel)</option>
-        <option value="tea">Tea (Elegant Coding Ritual)</option>
-        <option value="energyDrink">Energy Drinks (Coding All-Nighter)</option>
-        <option value="soda">Soda (Risky, Yet Refreshing)</option>
+        <option value="coffee">Coffee</option>
+        <option value="tea">Tea</option>
+        <option value="energyDrink">Energy Drinks</option>
+        <option value="soda">Soda</option>
       </select><br>
 
 			<button type="submit">Find My Language!</button>
