--- a/language.html
+++ b/language.html
@@ -10,36 +10,36 @@
 <body>
   <div class="container">
     <h1>What Programming Language Are You?!</h1>
-    <form id="languageForm">
+    <form id="guessForm">
       <label for="experince">How many years have you been coding for?</label>
       <input type="number" id="experince" required><br>
 
-			<label for="projectType">Your Coding Project:</label>
-			<select id="projectType" required>
+			<label for="favProject">Your Coding Project:</label>
+			<select id="favProject" required>
 				<option value="web">Facekoob</option>
 				<option value="app">Tikkot</option>
 				<option value="data">Data-Driven Points</option>
 				<option value="game">SpiderMoon</option>
 			</select><br>
 
-			<label for="interest">Your Coding Magic:</label>
-      <select id="interest" required>
+			<label for="favMagic">Your Coding Magic:</label>
+      <select id="favMagic" required>
         <option value="frontend">Frontend Wizardry</option>
         <option value="backend">Backend Sorcery</option>
         <option value="ai">Artificial Intelligence Alchemist</option>
         <option value="iot">IoT Innovator</option>
       </select><br>
 
-			<label for="personality">Your Coding Spirit Animal:</label>
-      <select id="personality" required>
+			<label for="favPersonality">Your Coding Spirit Animal:</label>
+      <select id="favPersonality" required>
         <option value="lonewolf">Lonewolf</option>
         <option value="dog">Dog</option>
         <option value="bird">Bird</option>
         <option value="OVO">OVO</option>
       </select><br>
 
-			<label for="superpower">Your Coding Superpower:</label>
-      <select id="superpower" required>
+			<label for="favSuperpower">Your Coding Superpower:</label>
+      <select id="favSuperpower" required>
         <option value="telekinesis">Telekinesis</option>
         <option value="timeTravel">Time Travel</option>
         <option value="invisibility">Invisibility</option>
