added 's to syntax to html to see if fix java issues

--- a/language.html
+++ b/language.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>SuggestLang</title>
   <link href="css/styles.css">
-  <script src="js/script.js"></script>
+  <script src="js/scripts.js"></script>
 </head>
 <body>
   <div class="container">
@@ -17,9 +17,9 @@
 			<label for="favProject">Your Coding Project:</label>
 			<select id="favProject" required>
 				<option value="web">Facekoob</option>
-				<option value="app">Tikkot</option>
+				<option value="apps">Tikkot</option>
 				<option value="data">Data-Driven Points</option>
-				<option value="game">SpiderMoon</option>
+				<option value="games">SpiderMoon</option>
 			</select><br>
 
 			<label for="favMagic">Your Coding Magic:</label>
@@ -33,8 +33,8 @@
 			<label for="favPersonality">Your Coding Spirit Animal:</label>
       <select id="favPersonality" required>
         <option value="lonewolf">Lonewolf</option>
-        <option value="dog">Dog</option>
-        <option value="bird">Bird</option>
+        <option value="dogs">Dogs</option>
+        <option value="birds">Birds</option>
         <option value="OVO">OVO</option>
       </select><br>
 
