--- a/language.html
+++ b/language.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>SuggestLang</title>
   <link href="css/styles.css">
-  <script src="js/scripts.js"></script>
+  <script src="js/script.js"></script>
 </head>
 <body>
   <div class="container">
