add calling of id to be retrived in js and console log to test

--- a/language.html
+++ b/language.html
@@ -11,8 +11,8 @@
   <div class="container">
     <h1>What Programming Language Are You?!</h1>
     <form id="guessForm">
-      <label for="experince">How many years have you been coding for?</label>
-      <input type="number" id="experince" required><br>
+      <label for="experience">How many years have you been coding for?</label>
+      <input type="number" id="experience" required><br>
 
 			<label for="favProject">Your Coding Project:</label>
 			<select id="favProject" required>
